# CC4EmbeddedSystem

./: .gitignore  CC4EmbeddedSystem.ps1  LICENSE  README.md
V1/: README.md
V2/: README.md  pyproject.toml
V2/src/: CC_Errs.py  main.py  utils.py
V3/: README.md  package-lock.json  package.json  tsconfig.json
V3/public/: index.html
V3/src/: gui.ts  makefsdata.ts  utils.ts
